--- a/index.html
+++ b/index.html
@@ -380,13 +380,13 @@
       <section class="rank">
         <div class="inner">
           <h2>Ranking</h2>
-            <ul class="rankNav">
-              <li><a href="" class="rankNavItem rankMusical clickNav">뮤지컬</a></li>
-              <li><a href="" class="rankNavItem rankConcert">콘서트</a></li>
-              <li><a href="" class="rankNavItem rankTheater">연극</a></li>
-              <li><a href="" class="rankNavItem rankClassic">클래식</a></li>
-              <li><a href="" class="rankNavItem rankEx">전시</a></li>
-            </ul>
+          <ul class="rankNav">
+            <li><a href="" class="rankNavItem rankMusical clickNav">뮤지컬</a></li>
+            <li><a href="" class="rankNavItem rankConcert">콘서트</a></li>
+            <li><a href="" class="rankNavItem rankTheater">연극</a></li>
+            <li><a href="" class="rankNavItem rankClassic">클래식</a></li>
+            <li><a href="" class="rankNavItem rankEx">전시</a></li>
+          </ul>
           <div class="rankCon">
             <div class="rankAll">
               <ul class="rankConMusical rankConUl">
@@ -395,12 +395,12 @@
                     <div class="rankConImg">
                       <!-- 블러 배경 --><div class="rankConImg1"></div>
                       <!-- 선명한 배경 --><img src="img/rank_musical1.jpg" alt="rank_musical1">
+                      <div class="rankNum">1위</div>
                     </div>
                     <div class="text">
                       <h3>뮤지컬 〈나르치스와 골드문트〉</h3>
                       <p>2023.04.15 ~ 2023.07.02 대학로 TOM 1관</p>
                     </div>
-                    <div class="rankNum">1위</div>
                   </a>
                 </li>
                 <li class="rankLi">
@@ -408,12 +408,12 @@
                     <div class="rankConImg">
                       <!-- 블러 배경 --><div class="rankConImg2"></div>
                       <!-- 선명한 배경 --><img src="img/rank_musical2.jpg" alt="rank_musical2">
+                      <div class="rankNum">2위</div>
                     </div>
                     <div class="text">
                       <h3>뮤지컬 〈맘마미아!〉 - 인천</h3>
                       <p>2023.07.07 ~ 2023.07.09 인천문화예술회관 대공연장</p>
                     </div>
-                    <div class="rankNum">2위</div>
                   </a>
                 </li>
                 <li class="rankLi">
@@ -421,12 +421,12 @@
                     <div class="rankConImg">
                       <!-- 블러 배경 --><div class="rankConImg3"></div>
                       <!-- 선명한 배경 --><img src="img/rank_musical3.jpg" alt="rank_musical3">
+                      <div class="rankNum">3위</div>
                     </div>
                     <div class="text">
                       <h3>뮤지컬 〈쿠로이 저택엔 누가 살고 있을까?〉</h3>
                       <p>2023.05.02 ~ 2023.07.23 플러스씨어터</p>
                     </div>
-                    <div class="rankNum">3위</div>
                   </a>
                 </li>
               </ul>
@@ -435,52 +435,40 @@
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg1"></div>
-                      <!-- 블러 배경 -->
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_concert1.jpg" alt="rank_concert1">
-                      <!-- 선명한 배경 -->
+                      <!-- 블러 배경 --><div class="rankConImg1"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_concert1.jpg" alt="rank_concert1">
+                      <div class="rankNum">1위</div>
                     </div>
                     <div class="text">
                       <h3>2023 SHINee FANMEETING ‘Everyday is SHINee DAY’ : [Piece of SHINE]</h3>
                       <p>2023.05.27 ~ 2023.05.28 잠실실내체육관</p>
                     </div>
-                    <div class="rankNum">1위</div>
                   </a>
                 </li>
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg2"></div>
-                      <!-- 블러 배경 -->
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_concert2.jpg" alt="rank_concert2">
-                      <!-- 선명한 배경 -->
+                      <!-- 블러 배경 --><div class="rankConImg2"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_concert2.jpg" alt="rank_concert2">
+                      <div class="rankNum">2위</div>
                     </div>
                     <div class="text">
                       <h3>2023 NA KAMDEN FANMEETING [나캠든개론]</h3>
                       <p>2023.06.09 ~ 2023.06.10 YES24 LIVE HALL</p>
                     </div>
-                    <div class="rankNum">2위</div>
                   </a>
                 </li>
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg3"></div>
-                      <!-- 블러 배경 -->
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_concert3.jpg" alt="rank_concert3">
-                      <!-- 선명한 배경 -->
+                      <!-- 블러 배경 --><div class="rankConImg3"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_concert3.jpg" alt="rank_concert3">
+                      <div class="rankNum">3위</div>
                     </div>
                     <div class="text">
                       <h3>TAEYEON CONCERT - The ODD Of LOVE</h3>
                       <p>2023.06.03 ~ 2023.06.04 KSPO DOME(올림픽체조경기장)</p>
                     </div>
-                    <div class="rankNum">3위</div>
                   </a>
                 </li>
               </ul>
@@ -491,12 +479,12 @@
                     <div class="rankConImg">
                       <!-- 블러 배경 --><div class="rankConImg1"></div>
                       <!-- 선명한 배경 --><img src="img/rank_theater1.jpg" alt="rank_theater1">
+                      <div class="rankNum">1위</div>
                     </div>
                     <div class="text">
                       <h3>연극 〈포쉬〉</h3>
                       <p>2023.03.09 ~ 2023.05.21 예스24스테이지 3관</p>
                     </div>
-                    <div class="rankNum">1위</div>
                   </a>
                 </li>
                 <li class="rankLi">
@@ -504,12 +492,12 @@
                     <div class="rankConImg">
                       <!-- 블러 배경 --><div class="rankConImg2"></div>
                       <!-- 선명한 배경 --><img src="img/rank_theater2.jpg" alt="rank_theater2">
+                      <div class="rankNum">2위</div>
                     </div>
                     <div class="text">
                       <h3>연극 〈시티즌 오브 헬〉</h3>
                       <p>2023.04.21 ~ 2023.05.28 대학로 자유극장</p>
                     </div>
-                    <div class="rankNum">2위</div>
                   </a>
                 </li>
                 <li class="rankLi">
@@ -517,12 +505,12 @@
                     <div class="rankConImg">
                       <!-- 블러 배경 --><div class="rankConImg3"></div>
                       <!-- 선명한 배경 --><img src="img/rank_theater3.jpg" alt="rank_theater3">
+                      <div class="rankNum">3위</div>
                     </div>
                     <div class="text">
                       <h3>연극 [행오버]</h3>
                       <p>2022.01.21 ~ 2023.05.31 정극장</p>
                     </div>
-                    <div class="rankNum">3위</div>
                   </a>
                 </li>
               </ul>
@@ -531,52 +519,40 @@
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg1"></div>
-                      <!-- 블러 배경 -->
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_classic1.jpg" alt="rank_classic1">
-                      <!-- 선명한 배경 -->
+                      <!-- 블러 배경 --><div class="rankConImg1"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_classic1.jpg" alt="rank_classic1">
+                      <div class="rankNum">1위</div>
                     </div>
                     <div class="text">
                       <h3>일무</h3>
                       <p>2023.05.25 ~ 2023.05.28 세종문화회관 대극장</p>
                     </div>
-                    <div class="rankNum">1위</div>
                   </a>
                 </li>
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg2"></div>
-                      <!-- 블러 배경 -->
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_classic2.jpg" alt="rank_classic2">
-                      <!-- 선명한 배경 -->
+                      <!-- 블러 배경 --><div class="rankConImg2"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_classic2.jpg" alt="rank_classic2">
+                      <div class="rankNum">2위</div>
                     </div>
                     <div class="text">
                       <h3>2023 대한민국오페라페스티벌］ 라 트라비아타</h3>
                       <p>2023.05.19 ~ 2023.05.21 예술의전당 오페라극장</p>
                     </div>
-                    <div class="rankNum">2위</div>
                   </a>
                 </li>
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg3"></div>
-                      <!-- 블러 배경 -->
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_classic3.jpg" alt="rank_classic3">
-                      <!-- 선명한 배경 -->
+                      <!-- 블러 배경 --><div class="rankConImg3"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_classic3.jpg" alt="rank_classic3">
+                      <div class="rankNum">3위</div>
                     </div>
                     <div class="text">
                       <h3>세종 어린이 시리즈 | `오케스트라 여행`</h3>
                       <p>2023.05.21 ~ 2023.05.21 세종문화회관 대극장</p>
                     </div>
-                    <div class="rankNum">3위</div>
                   </a>
                 </li>
               </ul>
@@ -585,58 +561,45 @@
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg1"></div>
-                      <!-- 블러 배경 -->
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_ex1.jpg" alt="rank_ex1">
-                      <!-- 선명한 배경 -->
+                      <!-- 블러 배경 --><div class="rankConImg1"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_ex1.jpg" alt="rank_ex1">
+                      <div class="rankNum">1위</div>
                     </div>
                     <div class="text">
                       <h3>제16회 부산항축제 - 자갈치 크루즈</h3>
                       <p>2023.05.27 ~ 2023.05.28 부산 영도 아미르공원 내 아라마루 데크 승선장</p>
                     </div>
-                    <div class="rankNum">1위</div>
                   </a>
                 </li>
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg2"></div>
-                      <!-- 블러 배경 -->
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_ex2.jpg" alt="rank_ex2">
-                      <!-- 선명한 배경 -->
+                      <!-- 블러 배경 --><div class="rankConImg2"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_ex2.jpg" alt="rank_ex2">
+                      <div class="rankNum">2위</div>
                     </div>
                     <div class="text">
                       <h3>[부산] 2023 센텀맥주축제</h3>
                       <p>2023.05.23 ~ 2023.05.28 센텀두레라움광장</p>
                     </div>
-                    <div class="rankNum">2위</div>
                   </a>
                 </li>
                 <li class="rankLi">
                   <a href="#">
                     <div class="rankConImg">
-                      <!-- 블러 배경 -->
-                        <div class="rankConImg3"></div>
-                      <!-- 블러 배경 -->
-                      <!-- 선명한 배경 -->
-                      <img src="img/rank_ex3.jpg" alt="rank_ex3">
-                      <!-- 선명한 배경 -->
+                      <!-- 블러 배경 --><div class="rankConImg3"></div>
+                      <!-- 선명한 배경 --><img src="img/rank_ex3.jpg" alt="rank_ex3">
+                      <div class="rankNum">3위</div>
                     </div>
                     <div class="text">
                       <h3>서울바앤스피릿쇼 2023</h3>
                       <p>2023.07.28 ~ 2023.07.30 코엑스 D홀</p>
                     </div>
-                    <div class="rankNum">3위</div>
                   </a>
                 </li>
               </ul>
 
             </div>
-            
           </div>
 
           <a href="#" class="more">랭킹 더보기</a>
